# shellux

./: Cargo.toml  EXTERNAL_COMMANDS.md  PROJECT_STATUS.md  README.md  SHOW_COMMAND_IMPLEMENTATION.md  ZED_EXTENSION_SUMMARY.md  test_commands.shx  test_commands_working.shx  test_interactive.md  test_syntax.shx
docs/: LANGUAGE_SPEC.md
examples/: advanced.sx  hello.sx  show_demo.sx
shellux-syntax/: CHANGELOG.md  DEVELOPMENT.md  QUICKSTART.md  README.md  icon.md  install.sh  language-configuration.json  package.json  shellux-syntax-0.1.0.vsix  test-syntax.sx
shellux-syntax-zed/: .gitignore  CHANGELOG.md  DEV_EXTENSION_SETUP.md  FILES_OVERVIEW.md  FIX_SUMMARY.md  INSTALLATION_FIX.md  INSTALLATION_TEST.md  LICENSE  OPTIMIZATION.md  QUICKSTART.md  QUICK_FIX.md  README.md  README_DEV_EXTENSION.md  STATUS.md  TREE_SITTER_GUIDE.md  extension.json  extension.toml  install.sh
shellux-syntax-zed/languages/shellux/: config.json  config.toml  highlights.scm  shellux.json
src/: main.rs
src/builtins/: mod.rs
src/interpreter/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
