[package]
name = "shellux"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern scripting language to replace bash scripting"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/shellux"
repository = "https://github.com/yourusername/shellux"
keywords = ["shell", "scripting", "language", "interpreter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "shellux"
path = "src/main.rs"

[dependencies]
# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Regex support
regex = "1.0"
# JSON/YAML support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Process execution
tokio = { version = "1.0", features = ["full"] }
# File system operations
walkdir = "2.0"
# String utilities
unicode-segmentation = "1.0"
# Readline functionality for interactive mode
rustyline = "14.0"
